--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hugocxl/react-to-image": "^0.0.9",
 		"@tailwindcss/vite": "^4.1.10",
 		"@vercel/speed-insights": "^1.2.0",
 		"react": "^19.1.0",
