--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
+		"build:analyze": "tsc -b && vite build --mode analyze",
+		"preview": "vite preview",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"type-check": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.10",
@@ -28,6 +30,7 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"globals": "^16.0.0",
+		"terser": "^5.43.1",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.30.1",
 		"vite": "^6.3.5"
