--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,39 @@
 			"source": "/(.*)",
 			"destination": "/index.html"
 		}
-	]
+	],
+	"headers": [
+		{
+			"source": "/assets/(.*)",
+			"headers": [
+				{
+					"key": "Cache-Control",
+					"value": "public, max-age=31536000, immutable"
+				}
+			]
+		},
+		{
+			"source": "/(.*\\.(js|css|woff2|woff|ttf|eot))",
+			"headers": [
+				{
+					"key": "Cache-Control",
+					"value": "public, max-age=31536000, immutable"
+				}
+			]
+		},
+		{
+			"source": "/(.*\\.(png|jpg|jpeg|gif|webp|svg|ico))",
+			"headers": [
+				{
+					"key": "Cache-Control",
+					"value": "public, max-age=86400"
+				}
+			]
+		}
+	],
+	"functions": {
+		"app/api/**": {
+			"maxDuration": 10
+		}
+	}
 }
