--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,24 @@
 			]
 		},
 		{
+			"source": "/fonts/fonts.css",
+			"headers": [
+				{
+					"key": "Cache-Control",
+					"value": "public, max-age=86400"
+				}
+			]
+		},
+		{
+			"source": "/fonts/:font*",
+			"headers": [
+				{
+					"key": "Cache-Control",
+					"value": "public, max-age=31536000, immutable"
+				}
+			]
+		},
+		{
 			"source": "/(.*\\.(js|css|woff2|woff|ttf|eot))",
 			"headers": [
 				{
