--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
 	],
 	"headers": [
 		{
-			"source": "/assets/(.*)",
+			"source": "/assets/:path*",
 			"headers": [
 				{
 					"key": "Cache-Control",
@@ -18,7 +18,7 @@
 			]
 		},
 		{
-			"source": "/fonts/**",
+			"source": "/fonts/:path*",
 			"headers": [
 				{
 					"key": "Cache-Control",
@@ -27,7 +27,7 @@
 			]
 		},
 		{
-			"source": "/(.*\\.(js|css|woff2|woff|eot))",
+			"source": "/:path*\\.(js|css|woff2|woff|eot)",
 			"headers": [
 				{
 					"key": "Cache-Control",
@@ -36,7 +36,7 @@
 			]
 		},
 		{
-			"source": "/(.*\\.(png|jpg|jpeg|gif|webp|svg|ico))",
+			"source": "/:path*\\.(png|jpg|jpeg|gif|webp|svg|ico)",
 			"headers": [
 				{
 					"key": "Cache-Control",
